syntax = "proto3";

package metricstracker;

option java_package = "com.metricstracker.proto";
option java_multiple_files = true;

service MetricsTracker {
  rpc GetPodsCPUUtilization (MetricsRequest) returns (PodMetricsResponse) {}
  rpc GetPodsMemoryUtilization (MetricsRequest) returns (PodMetricsResponse) {}
  rpc GetPodsHitsUtilization (MetricsRequest) returns (PodMetricsResponse) {}
  rpc GetNodesCPUUtilization (MetricsRequest) returns (NodeMetricsResponse) {}
  rpc GetNodesMemoryUtilization (MetricsRequest) returns (NodeMetricsResponse) {}
}

message MetricsRequest {
  int32 seconds = 1;  // Duration for measurements in seconds
}

message PodMetric {
  string pod_name = 1;
  double value = 2;
  string timestamp = 3;
}

message NodeMetric {
  string node_name = 1;
  double value = 2;
  string timestamp = 3;
}

message PodMetricsResponse {
  repeated PodMetric metrics = 1;
}

message NodeMetricsResponse {
  repeated NodeMetric metrics = 1;
}
